functions to order the posts

--- a/src/app/creative/posts/components/post-list/post-list.component.html
+++ b/src/app/creative/posts/components/post-list/post-list.component.html
@@ -14,7 +14,7 @@
   </md-card>
 
   <ms-post-list-item
-    *ngFor="let post of posts$ | async"
+    *ngFor="let post of (posts$ | async)?.slice().reverse()"
     [post]="post"
     fxFlex="50">
   </ms-post-list-item>
