--- a/src/app/creative/posts/components/post-list/post-list.component.html
+++ b/src/app/creative/posts/components/post-list/post-list.component.html
@@ -14,8 +14,8 @@
   </md-card>
 
   <ms-post-list-item
-    *ngFor="let post of (posts$ | async)?.slice().reverse()"
-    [post]="post"
+    *ngFor="let postComments of (postComments$ | async)?.slice().reverse()"
+    [post]="postComments"
     fxFlex="50">
   </ms-post-list-item>
 
